# spacetraders

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  dev.sh  publish.sh  spacetraders_schema.sql.template
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  contracts.md  eras-lifecycle.md  exploration.md  gate-construction.md  introduction.md  logistics-planner.md  mining-siphon.md  pathfinding.md  t5-trading.md  universe-data.md
helm/spacetraders/: Chart.yaml  values.yaml
helm/spacetraders/templates/: deployment.yaml  ingress.yaml  service.yaml  statefulset.yaml
helm/st-api-server/: Chart.yaml  values.yaml
helm/st-api-server/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/st-api-server/templates/tests/: test-connection.yaml
helm/st-event-processor/: Chart.yaml  values.yaml
helm/st-event-processor/templates/: _helpers.tpl  deployment.yaml
helm/st_api_server/: Chart.yaml  values.yaml
helm/st_api_server/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/st_api_server/templates/tests/: test-connection.yaml
helm/st_event_processor/: Chart.yaml
helm/st_event_processor/templates/: _helpers.tpl  deployment.yaml
src/: broker.rs  config.rs  lib.rs  pathfinding.rs  prelude.rs  schema.rs  ship_config.rs  ship_controller.rs  survey_manager.rs  tasks.rs
src/agent_controller/: agent_controller.rs  context.rs  contract_manager.rs  contracts.rs  exploration.rs  fleet.rs  join_handles.rs  ledger.rs  mod.rs
src/api_client/: api_models.rs  interceptor.rs  kafka_interceptor.rs  mod.rs  routes.rs
src/database/: db_models.rs  mod.rs
src/event_log/: models.rs
src/logistics_planner/: plan.rs
src/models/: mod.rs  system.rs
src/scylla_client/: mod.rs
src/ship_scripts/: construction.rs  exploration.rs  logistics.rs  mining.rs  mod.rs  probe.rs  probe_exploration.rs  scrap.rs  siphon.rs  survey.rs  t5_trader.rs
src/sim/: mod.rs  scenario1.rs
src/universe/: mod.rs  pathfinding.rs
src/web/: index.html  mod.rs
tests/fixtures/galaxy_2026-07-04/: README.md  universe.json  waypoints_sample25.ndjson
tools/: animate_expansion.py
