[package]
name = "st"
version = "0.5.5"
edition = "2024"
default-run = "main"
publish = false
license = "MIT"

[dependencies]

# tokio/hyper stack
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3.32"
reqwest = { version = "0.13", features = ["json", "native-tls"] }
warp = "0.4"

# postgres
diesel = { version = "2", features = ["postgres", "chrono", "serde_json", "uuid"] }
diesel-async = { version = "0.7", features = ["postgres", "deadpool"] }

# computation/optimisation libs
vrp-core = "1.25"
pathfinding = "4.14.0"

# general dependencies
chrono = { version = "0.4", features = ["serde"] }
dashmap = { version = "6", features = ["serde"] }
dotenvy = "0.15.7"
log = "0.4.29"
pretty_env_logger = "0.5.0"
prettytable = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
maplit = "1.0.2"
lazy_static = "1.5.0"
rand = "0.10"
uuid = { version = "1.22.0", features = ["v4"] }
regex = "1.12.3"
quadtree_rs = "0.1.3"
# imageproc = "0.25"
moka = { version = "0.12.14", features = ["future"] }
strum = { version = "0.28", features = ["derive"] }
paste = "1.0.15"

[profile.dev.package.vrp-core]
opt-level = 3
