[package]
name = "st"
version = "0.5.11"
edition = "2024"
default-run = "main"
publish = false
license = "MIT"

[dependencies]

# tokio/hyper stack
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
futures = "0.3.32"
reqwest = { version = "0.13", features = ["json", "native-tls"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# postgres
diesel = { version = "2", features = ["postgres", "chrono", "serde_json", "uuid"] }
diesel-async = { version = "0.9", features = ["postgres", "deadpool"] }

# computation/optimisation libs
vrp-core = "1.25"
pathfinding = "4.15.0"

# general dependencies
chrono = { version = "0.4", features = ["serde"] }
dashmap = { version = "6", features = ["serde"] }
dotenvy = "0.15.7"
log = "0.4.32"
pretty_env_logger = "0.5.0"
prettytable = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
maplit = "1.0.2"
lazy_static = "1.5.0"
rand = "0.10"
uuid = { version = "1.23.3", features = ["v4"] }
regex = "1.12.4"
quadtree_rs = "0.1.3"
moka = { version = "0.12.15", features = ["future"] }
strum = { version = "0.28", features = ["derive"] }
paste = "1.0.15" # required by vrp_core::custom_dimension! macro expansion

[profile.dev.package.vrp-core]
opt-level = 3
